fixed issue with bracket overlapping

--- a/styles/projects-section.css
+++ b/styles/projects-section.css
@@ -1,23 +1,18 @@
-#projects h2 {
-    margin-block: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-}
 
 #projects-scroller {
     display: flex;
     flex-flow: row nowrap;
     /* overflow-y: hidden; */
     height: 80vh;
+    gap: 2rem;
 }
 
 .projects-scroller-list {
     width: 100%;
     height: 100%;
     padding: 0;
-    display: flex;
-    flex-flow: column nowrap;
-    flex: 1;
+    margin: 0 auto;
+    
 }
 
 .project-card {
